# fast-request-logger

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/fast_request_logger/: __about__.py  main.py  test_main.py
tests/: __init__.py
